--- a/M1_Android-master/app/src/main/res/layout/game_screen.xml
+++ b/M1_Android-master/app/src/main/res/layout/game_screen.xml
@@ -6,233 +6,122 @@
     android:layout_height="match_parent">
 
     <GridLayout android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:rowCount="13"
-        android:columnCount="1"
-        android:background="#FFFFFF"
+                android:layout_height="match_parent"
+                android:rowCount="13"
+                android:columnCount="1"
+                android:background="#FFFFFF"
+                android:id="@+id/gridLayout" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+        <LinearLayout
+                android:background="#FFFFFF"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="0.01"
+                android:id="@+id/board1"
+                android:gravity="center"
+                android:orientation="horizontal" android:layout_height="45dp">
+
+            <TextView
+                    android:text="Lives:"
+                    android:id="@+id/textView"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="10sp"
+                    android:layout_marginTop="10sp"
+                    android:layout_height="20sp"
+                    android:layout_width="40sp"
+            />
+
+            <TextView
+                    android:text="X"
+                    android:id="@+id/numLives"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/textView"
+                    android:layout_marginTop="10sp"
+                    android:layout_width="20sp"
+                    android:layout_height="20sp"
+                    android:layout_marginRight="30sp"
+            />
+
+            <TextView
+                    android:text="Character Name:"
+                    android:id="@+id/textView4"
+                    app:layout_constraintTop_toBottomOf="@+id/textView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginTop="10sp"
+                    android:layout_marginRight="3sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20sp"
+            />
+
+            <TextView
+                    android:text="Name"
+                    android:id="@+id/textView5"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/textView4"
+                    android:layout_marginTop="10sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20sp"
+            />
+        </LinearLayout>
+
+        <LinearLayout
+                android:background="#FFFFFF"
+                android:layout_gravity="fill"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="0.01"
+                android:layout_marginBottom="3sp"
+                android:id="@+id/board2"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
         >
-        <LinearLayout
-            android:background="#FFFFFF"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="0.05"
-            android:id="@+id/board1"
-            android:gravity="center"
-            android:orientation="horizontal">
+            <TextView
+                    android:text="Difficulty:"
+                    android:id="@+id/textView3"
+                    app:layout_constraintStart_toEndOf="@+id/numLives"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="10sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20sp"
+                    android:layout_marginRight="3sp"
+            />
+            <TextView
+                    android:text="D"
+                    android:id="@+id/textView8"
+                    app:layout_constraintStart_toEndOf="@+id/textView3"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="10sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20sp"
+                    android:layout_marginRight="50sp"
+            />
 
             <TextView
-                android:text="Lives:"
-                android:id="@+id/textView"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginLeft="10sp"
-                android:layout_marginTop="10sp"
-                android:layout_height="20sp"
-                android:layout_width="40sp"
-                />
-
+                    android:text="Score:"
+                    android:id="@+id/textView9"
+                    app:layout_constraintTop_toBottomOf="@+id/textView3"
+                    app:layout_constraintStart_toEndOf="@+id/textView5"
+                    android:layout_marginTop="10sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20sp"
+                    android:layout_marginRight="3sp"
+            />
             <TextView
-                android:text="X"
-                android:id="@+id/numLives"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView"
-                android:layout_marginTop="10sp"
-                android:layout_width="20sp"
-                android:layout_height="20sp"
-                android:layout_marginRight="30sp"
-                />
-
-            <TextView
-                android:text="Character Name:"
-                android:id="@+id/textView4"
-                app:layout_constraintTop_toBottomOf="@+id/textView"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginTop="10sp"
-                android:layout_marginRight="3sp"
-                android:layout_width="wrap_content"
-                android:layout_height="20sp"
-                />
-
-            <TextView
-                android:text="Name"
-                android:id="@+id/textView5"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView4"
-                android:layout_marginTop="10sp"
-                android:layout_width="wrap_content"
-                android:layout_height="20sp"
-                />
+                    android:text="0"
+                    android:id="@+id/textView10"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8"
+                    app:layout_constraintStart_toEndOf="@+id/textView9"
+                    android:layout_marginTop="10sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="20sp"
+            />
         </LinearLayout>
 
-        <LinearLayout
-            android:background="#FFFFFF"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="0.05"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/board2"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal"
-            >
-            <TextView
-                android:text="Difficulty:"
-                android:id="@+id/textView3"
-                app:layout_constraintStart_toEndOf="@+id/numLives"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="10sp"
-                android:layout_width="wrap_content"
-                android:layout_height="20sp"
-                android:layout_marginRight="3sp"
-                />
-            <TextView
-                android:text="D"
-                android:id="@+id/textView8"
-                app:layout_constraintStart_toEndOf="@+id/textView3"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="10sp"
-                android:layout_width="wrap_content"
-                android:layout_height="20sp"
-                android:layout_marginRight="50sp"
-                />
+        <ImageView android:layout_columnWeight="1"
+                   android:layout_rowWeight="1" android:id="@+id/gameImage">
 
-            <TextView
-                android:text="Score:"
-                android:id="@+id/textView9"
-                app:layout_constraintTop_toBottomOf="@+id/textView3"
-                app:layout_constraintStart_toEndOf="@+id/textView5"
-                android:layout_marginTop="10sp"
-                android:layout_width="wrap_content"
-                android:layout_height="20sp"
-                android:layout_marginRight="3sp"
-                />
-            <TextView
-                android:text="0"
-                android:id="@+id/textView10"
-                app:layout_constraintTop_toBottomOf="@+id/textView8"
-                app:layout_constraintStart_toEndOf="@+id/textView9"
-                android:layout_marginTop="10sp"
-                android:layout_width="wrap_content"
-                android:layout_height="20sp"
-                />
-        </LinearLayout>
+        </ImageView>
 
-        <TextView
-            android:background="#7CFC00"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1.5"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row1"/>
 
-        <TextView
-            android:background="#0000FF"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1.5"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row2"/>
-
-        <TextView
-            android:background="#0000FF"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1.5"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row3"/>
-
-        <TextView
-            android:background="#0000FF"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1.5"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row4"/>
-
-        <TextView
-            android:background="#0000FF"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1.5"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row5"/>
-
-        <TextView
-            android:background="#0000FF"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1.5"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row6"/>
-
-        <TextView
-            android:background="#804fc4"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="0.5"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row7"/>
-
-        <TextView
-            android:background="#000000"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row8"/>
-
-        <TextView
-            android:background="#000000"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row9"/>
-
-        <TextView
-            android:background="#000000"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row10"/>
-
-        <TextView
-            android:background="#000000"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row11"/>
-
-        <TextView
-            android:background="#000000"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="1"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row12"/>
-
-        <TextView
-            android:background="#804fc4"
-            android:layout_gravity="fill"
-            android:layout_columnWeight="1"
-            android:layout_rowWeight="0.75"
-            android:layout_marginBottom="3sp"
-            android:id="@+id/row13"/>
     </GridLayout>
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/frog" app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/pngfind_com_frogger_png_5284221"
-            android:id="@+id/imageView4"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="690dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="190dp"/>
-    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
