--- a/M1_Android-master/app/src/main/res/layout/end_screen.xml
+++ b/M1_Android-master/app/src/main/res/layout/end_screen.xml
@@ -8,26 +8,31 @@
     <Button
             android:text="Try Again"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button" tools:layout_editor_absoluteY="533dp"
-            tools:layout_editor_absoluteX="148dp"/>
+            android:layout_height="wrap_content" android:id="@+id/button"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="148dp"
+            android:layout_marginTop="93dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
     <TextView
             android:text="You Lost!"
             android:layout_width="151dp"
-            android:layout_height="76dp" android:id="@+id/textView" tools:layout_editor_absoluteY="293dp"
-            tools:layout_editor_absoluteX="130dp" android:textSize="36sp"/>
+            android:layout_height="76dp" android:id="@+id/textView"
+            android:textSize="36sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="130dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="293dp"/>
     <Button
             android:text="Exit"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/exitbutton4" tools:layout_editor_absoluteY="609dp"
-            tools:layout_editor_absoluteX="153dp"/>
+            android:layout_height="wrap_content" android:id="@+id/exitbutton4"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="153dp"
+            android:layout_marginTop="27dp" app:layout_constraintTop_toBottomOf="@+id/button"/>
     <TextView
             android:text="Final Score:"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView3" tools:layout_editor_absoluteY="421dp"
-            tools:layout_editor_absoluteX="148dp"/>
+            android:layout_height="wrap_content" android:id="@+id/textView3"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="148dp"
+            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
     <TextView
             android:text="0"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView4" tools:layout_editor_absoluteY="421dp"
-            tools:layout_editor_absoluteX="233dp"/>
+            android:layout_height="wrap_content" android:id="@+id/textView4"
+            android:layout_marginStart="12dp" app:layout_constraintStart_toEndOf="@+id/textView3"
+            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
