--- a/M1_Android-master/app/src/main/res/layout/end_screen.xml
+++ b/M1_Android-master/app/src/main/res/layout/end_screen.xml
@@ -4,35 +4,43 @@
                                                    xmlns:tools="http://schemas.android.com/tools"
                                                    android:layout_width="match_parent"
                                                    android:layout_height="match_parent"
-                                                   tools:context=".Screens.StartScreen">
+                                                   tools:context=".Screens.StartScreen" android:background="#F85D5D">
     <Button
             android:text="Try Again"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="148dp"
-            android:layout_marginTop="93dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
-    <TextView
-            android:text="You Lost!"
-            android:layout_width="151dp"
-            android:layout_height="76dp" android:id="@+id/textView"
-            android:textSize="36sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="130dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="293dp"/>
+            android:layout_width="160dp"
+            android:layout_height="80dp" android:id="@+id/button"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="124dp"
+            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
+            android:textSize="20sp"/>
     <Button
             android:text="Exit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/exitbutton4"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="153dp"
-            android:layout_marginTop="27dp" app:layout_constraintTop_toBottomOf="@+id/button"/>
+            android:layout_width="160dp"
+            android:layout_height="80dp" android:id="@+id/exitbutton4"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="124dp"
+            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/button" android:textSize="30sp"/>
     <TextView
             android:text="Final Score:"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView3"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="148dp"
-            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="75dp"
+            android:textSize="40sp" android:layout_marginTop="37dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView5" android:textColor="#FFFFFF"/>
     <TextView
             android:text="0"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:id="@+id/textView4"
-            android:layout_marginStart="12dp" app:layout_constraintStart_toEndOf="@+id/textView3"
-            android:layout_marginTop="52dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
+            android:layout_marginStart="20dp" app:layout_constraintStart_toEndOf="@+id/textView3"
+            android:textSize="40sp" android:layout_marginTop="37dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView5" android:textColor="#FFFFFF"/>
+    <ImageView
+            android:layout_width="480dp"
+            android:layout_height="241dp" app:srcCompat="@drawable/gameover" android:id="@+id/imageView4"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <ImageView
+            android:layout_width="304dp"
+            android:layout_height="160dp" app:srcCompat="@drawable/youlose" android:id="@+id/imageView5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="52dp" android:layout_marginTop="2dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
