--- a/M1_Android-master/app/src/main/res/layout/win_screen.xml
+++ b/M1_Android-master/app/src/main/res/layout/win_screen.xml
@@ -1,31 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-                                                   android:layout_height="match_parent">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent" android:background="#249529">
 
-    <TextView
-            android:text="You Won!"
-            android:layout_width="176dp"
-            android:layout_height="99dp" android:id="@+id/textView10" tools:layout_editor_absoluteY="316dp"
-            tools:layout_editor_absoluteX="117dp" android:textSize="34sp"/>
+    <ImageView
+            android:layout_width="304dp"
+            android:layout_height="160dp" app:srcCompat="@drawable/youwin" android:id="@+id/imageView7"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="60dp"
+            android:layout_marginTop="2dp" app:layout_constraintTop_toBottomOf="@+id/imageView6"/>
+    <ImageView
+            android:layout_width="480dp"
+            android:layout_height="241dp" app:srcCompat="@drawable/gameover" android:id="@+id/imageView6"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
     <Button
             android:text="Restart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button5" tools:layout_editor_absoluteY="490dp"
-            tools:layout_editor_absoluteX="156dp"/>
+            android:layout_width="160dp"
+            android:layout_height="80dp" android:id="@+id/button5"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="124dp" tools:textSize="22sp"/>
     <Button
             android:text="Exit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/button6" tools:layout_editor_absoluteY="584dp"
-            tools:layout_editor_absoluteX="159dp"/>
+            android:layout_width="160dp"
+            android:layout_height="80dp" android:id="@+id/button6"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/button5" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="124dp" android:textSize="30sp"/>
     <TextView
-            android:text="Score:"
+            android:text="Final Score:"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView11" tools:layout_editor_absoluteY="439dp"
-            tools:layout_editor_absoluteX="81dp"/>
+            android:layout_height="wrap_content" android:id="@+id/textView11"
+            android:textSize="40sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="75dp"
+            android:layout_marginTop="37dp" app:layout_constraintTop_toBottomOf="@+id/imageView7"
+            android:textColor="#FFFFFF"/>
     <TextView
             android:text="0"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:id="@+id/textView12" tools:layout_editor_absoluteY="441dp"
-            tools:layout_editor_absoluteX="174dp"/>
+            android:layout_height="wrap_content" android:id="@+id/textView12"
+            android:textSize="40sp" android:layout_marginStart="20dp"
+            app:layout_constraintStart_toEndOf="@+id/textView11" android:layout_marginTop="37dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView7" android:textColor="#FFFFFF"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
